--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.2"
+    "@openzeppelin/contracts": "^4.8.2",
+    "@truffle/hdwallet-provider": "^2.1.7",
+    "dotenv": "^16.0.3"
+  },
+  "devDependencies": {
+    "truffle-flattener": "^1.6.0"
   }
 }
